overwork of most warnings for deprecations